# square-learn

./: LICENSE  README.md  demos.py  linear_regression.py  nn_demos.py  pyproject.toml
examples/: linear_regression.py
sqlearn/: LinearRegressor.py  LogisticRegressor.py  Model.py  SGDRegressor.py  __init__.py  linear_regression.py  logistic_regression.py  model_interface.py  neural_network_core.py  neural_network_modules.py  sgd_regression.py
sqlearn/nn/: __init__.py  core.py  modules.py
