[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "square-learn"
version = "2.0.0"
authors = [
  { name="Idris Wardere", email="iawardere3@gmail.com" },
  { name="Jeremy Li", email="lij061703@gmail.com" }
]
description = "A machine learning library in Python"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  'numpy >= 1.23.1',
  'pandas >= 1.4.4'
]

[project.urls]
"Homepage" = "https://github.com/idriswardere/square-learn"
